@@ -2,7 +2,9 @@ package Test::Mock::Class::GenerateAnonWithRoleTest;
 
 use Test::Unit::Lite;
 
-use Moose;
+use Any::Moose;
+use if Any::Moose::mouse_is_preferred, 'MouseX::Foreign';
+
 extends 'Test::Unit::TestCase';
 
 use Test::Assert ':all';
@@ -12,7 +14,7 @@ sub test_mock_anon_class_with_role {
         class => 'Test::Mock::Class::Test::Dummy',
         roles => ['Test::Mock::Class::RoleTestRole'],
     );
-    assert_true($metamock->isa('Moose::Meta::Class'));
+    assert_true($metamock->isa(any_moose('::Meta::Class')));
 
     my $mock = $metamock->new_object;
     assert_true($mock->does('Test::Mock::Class::Role::Object'));
@@ -29,7 +31,7 @@ sub test_mock_anon_empty_class_with_role {
     my $metamock = Test::Mock::Class->create_mock_anon_class(
         roles => ['Test::Mock::Class::RoleTestRole'],
     );
-    assert_true($metamock->isa('Moose::Meta::Class'));
+    assert_true($metamock->isa(any_moose('::Meta::Class')));
 
     my $mock = $metamock->new_object;
     assert_true($mock->does('Test::Mock::Class::Role::Object'));
