@@ -2,7 +2,9 @@ package Test::Mock::Class::GenerateTest;
 
 use Test::Unit::Lite;
 
-use Moose;
+use Any::Moose;
+use if Any::Moose::mouse_is_preferred, 'MouseX::Foreign';
+
 extends 'Test::Unit::TestCase';
 
 use Test::Assert ':all';
@@ -14,7 +16,7 @@ sub test_mock_class {
         'Test::Mock::Class::Test::Dummy::MockGenerated',
         class => 'Test::Mock::Class::Test::Dummy',
     );
-    assert_true($meta->isa('Moose::Meta::Class'));
+    assert_true($meta->isa(any_moose('::Meta::Class')));
     assert_true(Test::Mock::Class::Test::Dummy::MockGenerated->isa('Test::Mock::Class::Test::Dummy::MockGenerated'));
 };
 
