@@ -1,6 +1,6 @@
 package Test::Mock::Class::MockTestRole;
 
-use Moose::Role;
+use Any::Moose 'Role';
 
 with 'Test::Mock::Class::MockBaseTestRole';
 with 'Test::Mock::Class::MockTallyTestRole';
