@@ -2,7 +2,9 @@ package Test::Mock::Class::UseTest;
 
 use Test::Unit::Lite;
 
-use Moose;
+use Any::Moose;
+use if Any::Moose::mouse_is_preferred, 'MouseX::Foreign';
+
 extends 'Test::Unit::TestCase';
 
 use Test::Assert ':all';
@@ -15,7 +17,7 @@ sub test_mock_class {
             mock_class 'Test::Mock::Class::Test::Dummy';
         };
         assert_equals('', $@);
-        assert_true($mock->isa('Moose::Meta::Class'));
+        assert_true($mock->isa(any_moose('::Meta::Class')));
         assert_true(Test::Mock::Class::Test::Dummy::Mock->isa('Test::Mock::Class::Test::Dummy::Mock'));
     };
 
@@ -24,7 +26,7 @@ sub test_mock_class {
             mock_class 'Test::Mock::Class::Test::Dummy' => 'Test::Mock::Class::Test::Dummy::Mock::Another';
         };
         assert_equals('', $@);
-        assert_true($mock->isa('Moose::Meta::Class'));
+        assert_true($mock->isa(any_moose('::Meta::Class')));
         assert_true(Test::Mock::Class::Test::Dummy::Mock::Another->isa('Test::Mock::Class::Test::Dummy::Mock::Another'));
     };
 };
@@ -34,7 +36,7 @@ sub test_mock_anon_class {
         mock_anon_class 'Test::Mock::Class::Test::Dummy';
     };
     assert_equals('', $@);
-    assert_true($mock->isa('Moose::Meta::Class'));
+    assert_true($mock->isa(any_moose('::Meta::Class')));
 };
 
 1;
